--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -24,3 +24,4 @@ jobs:
       with:
         url: 'https://www.chillibits.com/colorconverter/src/build_test.php'
         method: 'GET'
+        preventFailureOnNoResponse: 'true'
