--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,3 +24,4 @@ jobs:
       with:
         url: 'https://www.chillibits.com/colorconverter/src/build.php'
         method: 'GET'
+        preventFailureOnNoResponse: 'true'
